success payment screen text alignmnent fix
rain-99, fix no 9

--- a/frontend/web/rainmaker/packages/employee/src/ui-views/ScreenInterface/index.scss
+++ b/frontend/web/rainmaker/packages/employee/src/ui-views/ScreenInterface/index.scss
@@ -194,7 +194,7 @@ span[class^="MuiFormLabel-asterisk"] {
         position: fixed;
         bottom: 0;
         z-index: 1;
-        left: 0;
+        left: 35px;
         width: 100%;
         overflow: inherit !important;
     }
